# SIMD-itertools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: all_equal.rs  contains.rs  eq.rs  filter.rs  find.rs  is_sorted.rs  max.rs  min.rs  position.rs
src/: all.rs  all_equal.rs  any.rs  argmax.rs  argmin.rs  contains.rs  eq.rs  filter.rs  find.rs  is_sorted.rs  lib.rs  max.rs  min.rs  minmax.rs  position.rs
