[package]
name = "simd-itertools"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SIMD-accelerated alternatives for common operations like contains, max, find etc."
keywords = ["simd", "iterator"]
categories = ["algorithms", "concurrency"]
repository = "https://github.com/LaihoE/SIMD-itertools"


[dependencies]
itertools = "0.13.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"


[[bench]]
name = "position"
harness = false

[[bench]]
name = "all_equal"
harness = false

[[bench]]
name = "contains"
harness = false

[[bench]]
name = "eq"
harness = false

[[bench]]
name = "filter"
harness = false

[[bench]]
name = "find"
harness = false

[[bench]]
name = "is_sorted"
harness = false

[[bench]]
name = "max"
harness = false

[[bench]]
name = "min"
harness = false

[profile.release]
lto = true
debug = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1