[package]
name = "simd-itertools"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SIMD-accelerated alternatives for common operations like contains, max, find etc."
keywords = ["simd", "iterator"]
categories = ["algorithms", "concurrency"]
repository = "https://github.com/LaihoE/SIMD-itertools"

[dependencies]
itertools = "0.13.0"
memchr = "2.7.4"
multiversion = "0.8.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[profile.release]
lto = true
debug = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
